# ZeRefractorController

./: .gitignore  CMakeLists.txt  README.md  ZeRefractorController.sln  ZeRefractorController_Setup.iss  build_linux.sh
ASCOM_Driver/: ASCOM_Driver.csproj  Driver.cs  ReadMe.htm  SetupDialogForm.cs  SetupDialogForm.designer.cs
ASCOM_Driver/Properties/: AssemblyInfo.cs  Resources.Designer.cs
HIDAPI/: CMakeLists.txt  HIDAPI.vcxproj  HIDAPI.vcxproj.filters  hid.cpp
HIDAPI/linux/: hid.c
ZeRefractorController/: CMakeLists.txt  Comm.cpp  Comm.h  FirmwareUpdate.ui  ImportExportHex.cpp  ZeRefractorController.pri  ZeRefractorController.pro  ZeRefractorController.rc  ZeRefractorController.vcxproj  ZeRefractorController.vcxproj.filters  ascom_server.cpp  firmwareupdate.cpp  firmwareupdate.h  hid_pnp.cpp  hid_pnp.h  humiditygraph.cpp  humiditygraph.h  main.cpp  responses.cpp  responses.h  temperaturegraph.cpp  temperaturegraph.h  weathergraph.cpp  weathergraph.h  zerefractorcontroller.cpp  zerefractorcontroller.h  zerefractorcontroller.qrc  zerefractorcontroller.ui
ZeRefractorController/GeneratedFiles/Debug/: moc_Comm.cpp  moc_firmwareupdate.cpp  moc_hid_pnp.cpp  moc_humiditygraph.cpp  moc_temperaturegraph.cpp  moc_weathergraph.cpp  moc_zerefractorcontroller.cpp
